remove :: setting splash

--- a/index.html
+++ b/index.html
@@ -6,67 +6,19 @@
         <link rel="manifest" href="/manifest.webmanifest" />
 
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="OSJ Progressive Web App" />
+        <meta name="description" content="OSJ PWA" />
 
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-title" content="OSJ" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-        <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
 
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-2048x2732.png"
-            media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-1668x2224.png"
-            media="(device-width: 834px)  and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-1536x2048.png"
-            media="(device-width: 768px)  and (device-height: 1024px)  and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-1242x2688.png"
-            media="(device-width: 414px) and (device-height: 896px)  and (-webkit-device-pixel-ratio: 3)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-1125x2436.png"
-            media="(device-width: 375px) and (device-height: 812px)  and (-webkit-device-pixel-ratio: 3)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-750x1334.png"
-            media="(device-width: 375px) and (device-height: 667px)  and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-640x1136.png"
-            media="(device-width: 320px) and (device-height: 568px)  and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-828x1792.png"
-            media="(device-width: 414px) and (device-height: 896px)  and (-webkit-device-pixel-ratio: 2)"
-        />
-        <link
-            rel="apple-touch-startup-image"
-            href="/splash-1242x2208.png"
-            media="(device-width: 414px) and (device-height: 736px)  and (-webkit-device-pixel-ratio: 3)"
-        />
+        <link rel="icon" href="/icons/favicon.ico" />
 
-        <!-- Favicon -->
-        <link rel="icon" href="/icon-192.png" />
-
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
         <title>OSJ</title>
     </head>
-
     <body>
         <div id="root"></div>
         <script type="module" src="/src/main.tsx"></script>
