--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="OSJ PWA" />
 
+        <meta
+            name="theme-color"
+            content="#FFFFFF"
+            media="(prefers-color-scheme: light)"
+        />
+        <meta
+            name="theme-color"
+            content="#242424"
+            media="(prefers-color-scheme: dark)"
+        />
+
         <meta name="apple-mobile-web-app-title" content="OSJ" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
