--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
     <head>
         <meta charset="UTF-8" />
-
-        <link rel="manifest" href="/manifest.webmanifest" />
 
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="OSJ PWA" />
