feat :: bottom sheet setting

--- a/index.html
+++ b/index.html
@@ -6,16 +6,8 @@
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="OSJ PWA" />
 
-        <meta
-            name="theme-color"
-            content="#FFFFFF"
-            media="(prefers-color-scheme: light)"
-        />
-        <meta
-            name="theme-color"
-            content="#242424"
-            media="(prefers-color-scheme: dark)"
-        />
+        <meta name="theme-color" content="#FFFFFF" media="(prefers-color-scheme: light)" />
+        <meta name="theme-color" content="#242424" media="(prefers-color-scheme: dark)" />
 
         <meta name="apple-mobile-web-app-title" content="OSJ" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
@@ -29,6 +21,7 @@
     </head>
     <body>
         <div id="root"></div>
+        <div id="bottom-sheet-root"></div>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
